<resources>
    <string name="app_name">MyFarm</string>
    <string name="home">首页</string>
    <string name="recommend">推荐</string>
    <string name="shop_cart">购物车</string>
    <string name="my">我</string>
    <string name="select_all">全选</string>
    <string name="go_to_pay">确认购买</string>
    <string name="sum">合计: ￥</string>
    <string name="price">￥</string>
    <string name="shopcart_null">购物车空空如也~\n快去购物吧</string>
    <string name="CATEGORIES">
        [
            {
                "id": 103532,
                "name": "优选水果",
                "cids": [
                    {
                        "id": 103533,
                        "name": "国产浆果",
                        "pcid": 103532,
                        "img": "国产浆果"
                    },
                    {
                        "id": 103534,
                        "name": "苹果类",
                        "pcid": 103532,
                        "img": "苹果类"
                    },
                    {
                        "id": 103537,
                        "name": "瓜类",
                        "pcid": 103532,
                        "img": "瓜类-水果"
                    },
                   {
                        "id": 103536,
                        "name": "梨类",
                        "pcid": 103532,
                        "img": "梨类"
                    },
                    {
                        "id": 103538,
                        "name": "柑橘橙柚",
                        "pcid": 103532,
                        "img": "柑橘橙柚"
                    },
                    {
                        "id": 103539,
                        "name": "热带水果",
                        "pcid": 103532,
                        "img": "热带水果"
                    }
                ],
                "img": "http://img01.bqstatic.com/upload/activity/201/603/0309/20160303091930_007490.jpg"
            },
            {
                "id": 103536,
                "name": "新鲜时蔬",
                "cids": [
                    {
                        "id": 103537,
                        "name": "调味类",
                        "pcid": 103536,
                        "img": "调味类"
                    },
                    {
                        "id": 103538,
                        "name": "菌菇类",
                        "pcid": 103536,
                        "img": "菌菇类"
                    },
                    {
                        "id": 103539,
                        "name": "瓜类",
                        "pcid": 103536,
                        "img": "瓜类-蔬菜"
                    },
                    {
                        "id": 103540,
                        "name": "根茎果实",
                        "pcid": 103536,
                        "img": "根茎果实"
                    },
                    {
                        "id": 103541,
                        "name": "果实类",
                        "pcid": 103536,
                        "img": "果实类"
                    },
                    {
                        "id": 103542,
                        "name": "叶菜类",
                        "pcid": 103536,
                        "img": "叶菜类"
                    }
                ],
                "img": "http://img01.bqstatic.com/upload/activity/201/603/0309/20160303092031_070370.jpg"
            },
            {
                "id": 103565,
                "name": "肉蛋家禽",
                "cids": [
                    {
                        "id": 103566,
                        "name": "蛋类",
                        "pcid": 103565,
                        "img": "蛋类"
                    },
                    {
                        "id": 103567,
                        "name": "牛羊肉类",
                        "img": "牛羊肉类",
                        "pcid": 103565
                    },
                    {
                        "id": 103568,
                        "name": "禽肉",
                        "pcid": 103565,
                        "img": "禽肉"
                    },
                     {
                        "id": 103569,
                        "name": "肉丸",
                        "pcid": 103565,
                        "img": "肉丸"
                    },
                    {
                        "id": 103570,
                        "name": "猪肉",
                        "pcid": 103565,
                        "img": "猪肉"
                    }
                ],
                "img": "http://img01.bqstatic.com/upload/activity/201/603/0309/20160303092038_600042.jpg"
            }
        ]
    </string>
    <string name="FRUIT_PRODUCTS">
        [
                {
                    "id": 101998,
                    "name": "蜂觅·水晶富士",
                    "store_nums": 50,
                    "specifics": "320-380g 2粒/盒",
                    "market_price": 19.9,
                    "partner_price": 7.9,
                    "pre_img": "20160314100316_796965.jpg",
                    "pre_imgs": "20160314100320_342771.jpg",
                    "category_id": 103532,
                    "cid": 103532,
                    "child_cid": 103533,
                    "price": 7.9,
                    "img": "http://img01.bqstatic.com/upload/goods/201/603/1410/20160314100316_796965.jpg@200w_200h_90Q.jpg"
                },
                {
                    "id": 101765,
                    "name": "爱鲜蜂·红颜草莓",
                    "store_nums": 50,
                    "specifics": "380g/盒",
                    "market_price": 49,
                    "partner_price": 23.8,
                    "pre_img": "20160304161529_578626.jpg",
                    "pre_imgs": "20160304161532_230452.jpg",
                    "category_id": 103532,
                    "cid": 103532,
                    "child_cid": 103534,
                    "price": 8.8,
                    "img": "http://img01.bqstatic.com/upload/goods/201/603/0416/20160304161529_578626.jpg@200w_200h_90Q.jpg"
                },
                {
                    "id": 91698,
                    "name": "蜂觅·越南直采红心火龙果",
                    "store_nums": 50,
                    "specifics": "340-450g/粒",
                    "market_price": 49,
                    "partner_price": 11.9,
                    "pre_img": "20160304170813_928198.jpg",
                    "pre_imgs": "20160304170818_266474.jpg",
                    "category_id": 103532,
                    "cid": 103532,
                    "child_cid": 103535,
                    "price": 11.9,
                    "img": "http://img01.bqstatic.com/upload/goods/201/603/0417/20160304170813_928198.jpg@200w_200h_90Q.jpg"
                },
                {
                    "id": 101762,
                    "name": "爱鲜蜂·进口油桃",
                    "store_nums": 50,
                    "specifics": "320-360g 2粒/盒",
                    "market_price": 39.9,
                    "partner_price": 19.9,
                    "pre_img": "20160303094122_320107.jpg",
                    "pre_imgs": "20160303094121_628261.jpg",
                    "category_id": 103532,
                    "cid": 103532,
                    "child_cid": 103536,
                    "price": 19.9,
                    "img": "http://img01.bqstatic.com/upload/goods/201/603/0309/20160303094122_320107.jpg@200w_200h_90Q.jpg"
                },
                {
                    "id": 14846,
                    "name": "爱鲜蜂·进口红提",
                    "store_nums": 5,
                    "specifics": "400g/盒",
                    "market_price": 32,
                    "partner_price": 16.8,
                    "pre_img": "20160304170750_398930.jpg",
                    "pre_imgs": "20160304170754_097189.jpg",
                    "category_id": 103532,
                    "cid": 103532,
                    "child_cid": 103537,
                    "price": 16.8,
                    "img": "http://img01.bqstatic.com/upload/goods/201/603/0417/20160304170750_398930.jpg@200w_200h_90Q.jpg"
                },
                {
                    "id": 99277,
                    "name": "精选圣女果",
                    "store_nums": 50,
                    "specifics": "450g",
                    "market_price": 10,
                    "partner_price": 6.2,
                    "pre_img": "20160226092944_458013.jpg",
                    "pre_imgs": "20160226092906_667663.jpg",
                    "category_id": 103532,
                    "cid": 103532,
                    "child_cid": 103538,
                    "price": 6.2,
                    "img": "http://img01.bqstatic.com/upload/goods/201/602/2609/20160226092944_458013.jpg@200w_200h_90Q.jpg"
                }
            ]
    </string>
</resources>